# basic_study

./: .gitignore  README.md
ENV/docker/: README.md
ENV/git/: README.md
ENV/makefile/: Makefile
ENV/terminal/: README.md
cpp/2021-04-22_filter/01_DOC/: readMe.md
cpp/2021-04-23_noise cancel/01_DOC/: readMe.md
cpp/2021-05-18_pointer_address/01_DOC/: README.md
cpp/2021-05-18_pointer_address/02_SRC/: Makefile  main.c  on.sh  reader.c  writer.c
cpp/2021-05-20_fft/01_DOC/: README.md  REPORT_SRC.md  fft.md  log_0524.txt
cpp/2021-05-20_fft/02_SRC/: Makefile  README.rst  fft.c  fft.cl  hello.c  hello.cl  log.txt  output.pgm  pgm.h  runcontainer.sh
cpp/2021-05-21_bit_ALU/SRC/: Makefile  a.out  main.cpp
cpp/2021-06-07_Binary_search_tree/01_DOC/: binarySearchTree.md
cpp/2021-06-07_Binary_search_tree/02_SRC/: Makefile  main.c
cpp/2021-06-07_Quick_sort/01_DOC/: Quick Sort.md
cpp/2022-07-28_hashTable/: main.cpp
cpp/2022-07-28_kdtree/: Makefile  kdtree.h  main.cpp
cpp/2022-08-30_dataStructure/: README.md
cpp/2023-06-21_glib_udp/02_SRC/example1/: CMakeLists.txt  udpserver.c
flutter/03_flutter/: README.md  files.md  image.md  network.md  rangeslider.md  release.md  scroll.md
git/: README.md
gnuplot/: GNUPLOT.md  README.md
gnuplot/image/: bar1.bat  out.txt
gnuplot/image/gnuplot/: out.txt
makefile/: Makefile  README.md
markdown/: README.md
markdown/marp/: README.md  marp.md
ros/: README.md
ros/01_DOC/: README.md
ros2/: README.md
ros2/ex04_pcl/: README.md
ros2/ex04_pcl/src/ros2pcl_test/: CMakeLists.txt
ros2/ex04_pcl/src/ros2pcl_test/src/: main.cpp
sh/2022-12-01_infinityLoop_app/: checker.sh  testApp.sh
sh/2022-12-01_stopApp/: stop.sh
sh/2022-12-01_useGnome_app/: start.sh
sh/2023-01-25_checkDirectory_exist/: check_dir.sh
(+483 files in other folders)
